--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@ hr {
 
 /* Set a style for the submit button */
 .registerbtn {
-  background-color: #4CAF50;
+  background-color: #4B74B0;
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
@@ -94,20 +94,21 @@ a {
 
 .show {display: block;
 }
+
 </style>
 </head>
 <body>
-<form action="C:\Users\Arnav Kaushal\IdeaProjects\practice\src\action_page.php">
+<form action="C:\Users\Arnav Kaushal\IdeaProjects\practice\src\action_page.php" method="POST">
     <div class="container">
-        <h1>Register</h1>
-        <p>Please fill in this form to create an account.</p>
+        <h1><center>Book Appointment</center></h1>
+        <p><h4><center>Please fill in this form to book an appointment</center></h4></p>
         <hr>
 
         <label for="ref_no"><b>Reference Number</b></label>
         <input type="text" placeholder="FCT Reference Number" name="ref_no" required>
 
         <h3>&nbsp;</h3>
-        <label><b>Subject Property Address :</b></label><br>
+        <label><h2><b>Subject Property Address :</b></h2></label><br>
         <h6>&nbsp;</h6>
 
         <label for="unit_no"><b>Unit Number</b></label>
@@ -128,12 +129,34 @@ a {
         <label for="postal_code"><b>Postal Code</b></label>
         <input type="text" placeholder="Enter Postal Code" name="postal_code" required>
 
+        <br>
+        <br>
+
         <label for="province"><b>Province</b></label>
         <select name="Province" class="dropdown-content">
-            <option value="ON">ON</option>
-            <option value="AB">AB</option>
+            <option value="AB">   AB    </option>
             <option value="BC">BC</option>
+            <option value="MB">MB</option>
             <option value="NB">NB</option>
+            <option value="NL">NL</option>
+            <option value="NS">NS</option>
+            <option value="NT">NT</option>
+            <option value="NU">NU</option>
+            <option value="ON">ON</option>
+            <option value="PE">PE</option>
+            <option value="QC">QC</option>
+            <option value="SK">SK</option>
+            <option value="YT">YT</option>
+        </select>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <label for="service_type"><b>Service</b></label>
+        <select name="Service" class="dropdown-content">
+            <option value="drive_by_pic">   Drive by Photo : 45 CAD   </option>
         </select>
 
         <br>
@@ -145,7 +168,14 @@ a {
         <label for="client_last_name"><b>Client Last Name</b></label>
         <input type="text" placeholder="Enter Client's last name" name="client_last_name" required>
 
-        <label><b>Ordered By :</b></label>
+        <h4>&nbsp;</h4>
+
+
+        <label><b><h2>Ordered By :</h2></b></label>
+
+        <br>
+        <h6>&nbsp;</h6>
+
 
         <label for="first_name"><b>First Name</b></label>
         <input type="text" placeholder="Enter First Name" name="first_name" required>
@@ -160,9 +190,9 @@ a {
         <input type="number" placeholder="Enter Phone Number" name="p_no" required>
 
         <br>
-        <!--<h6>&nbsp;</h6>-->
-        <hr >
-
+        <br>
+        <br>
+        
         <label for="email_addr"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email_addr" required>
 
