--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@ a {
 </style>
 </head>
 <body>
-<form action="C:\Users\Arnav Kaushal\IdeaProjects\practice\src\action_page.php" method="POST">
+<form action="C:\Users\Arnav Kaushal\Desktop\action_page.php" method="GET">
     <div class="container">
         <h1><center>Book Appointment</center></h1>
         <p><h4><center>Please fill in this form to book an appointment</center></h4></p>
@@ -192,7 +192,7 @@ a {
         <br>
         <br>
         <br>
-        
+
         <label for="email_addr"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email_addr" required>
 
@@ -205,7 +205,7 @@ a {
         <label for="pic_email_addr"><b>Email for Photo Delivery (if different than above)</b></label>
         <input type="text" placeholder="Enter Email" name="email_addr">
 
-        <button type="submit" class="registerbtn">Submit</button>
+        <button type="submit" class="registerbtn"><h3>Add to Cart</h3></button>
     </div>
 
 </form>
