--- a/formPage.html
+++ b/formPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/moment.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -45,7 +46,41 @@
         <a class="btn btn-primary btn-lg" href="http://valueforce.thelearnapp.com/about-us/" role="button">Learn more about Valuforce</a>
     </p>
 </div>
+
+
+    <!--FORM STARTS HERE-->
+
     <form class="container" id="appointment_form">
+        <!--<div class="form-row">-->
+        <!--<div class="form-group col-md-6">-->
+        <!--<input type="text" class="form-control datetimepicker-input" id="date-time"-->
+        <!--data-toggle="datetimepicker" data-target="#date-time"/>-->
+        <!--</div>-->
+        <!--</div>-->
+
+        <div class="form-row ">
+            <div class="form-group col-md-6">
+                <label for="date">Pick a Date</label>
+                <div class="input-group date" id="date" data-target-input="nearest">
+                    <input type="date" class="form-control datepicker-input" data-target="#date"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="time">Select Time for an Appointment</label>
+            <select id="time" class="form-control" required>
+                <option value="9:00">9 am</option>
+                <option value="10:00">10 am</option>
+                <option value="11:00">11 am</option>
+                <option value="12:00">12 pm</option>
+                <option value="13:00">1 pm</option>
+                <option value="14:00">2 pm</option>
+                <option value="15:00">3 pm</option>
+                <option value="16:00">4 pm</option>
+                <option value="17:00">5 pm</option>
+            </select>
+        </div>
 
 
     <div class="form-group">
@@ -184,7 +219,8 @@
 
         console.log( "ready!" );
 
-
+        var date_selected = document.getElementById("date").value;
+        var time_selected = document.getElementById("time").value;
         var ref_no = document.getElementById("reference_number").value;
         var unit_no = document.getElementById("unit_number").value;
     var street_no = document.getElementById("street_number").value;
@@ -204,6 +240,8 @@
     var photo_link = document.getElementById("photo_link").value;
 
         const client = {
+            date: date_selected,
+            time: time_selected,
             reference: ref_no,
             unitNumber: unit_no,
             streetNumber: street_no,
@@ -225,7 +263,7 @@
 
         $("#submit_form").on("click", function () {
 
-            if (email_input === email_confirm) {
+            if (email_input === email_confirm && email_input !== "") {
                 window.localStorage.setItem('client_data', JSON.stringify(client));
                 window.location.href = "./checkoutPage.html";
             } else {
