--- a/checkoutPage.html
+++ b/checkoutPage.html
@@ -66,6 +66,53 @@
 
                 </li>
 
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="client_label">Client Last Name</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="client_lastName"></span>
+
+                </li>
+
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="orderby_label">Ordered By</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="ordered_by"></span>
+
+                </li>
+
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="email_label">Email</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="client_email"></span>
+
+                </li>
+
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="phone_label">Phone Number</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="phone_number"></span>
+
+                </li>
+
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="photo_label">Email photos at</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="photo_link"></span>
+
+                </li>
+
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" id="datetime_label">Date & Time Selected</h6>
+                    </div>
+                    <span class=" col-md-6 text-muted" id="date-time"></span>
+
+                </li>
                 <li class="list-group-item d-flex justify-content-between">
                     <span>Total (CAD)</span>
                     <strong id="total_price">$20</strong>
@@ -146,6 +193,7 @@
                             Please select a valid country.
                         </div>
                     </div>
+
                     <div class="col-md-4 mb-3">
                         <label for="province">Select Province</label>
                         <select id="province" class="form-control" required>
@@ -273,7 +321,7 @@
 
                 var orderby_fullName = client["orderFirstName"] + " " + client["orderLastName"];
 
-                $("ordered_by").text(orderby_fullName);
+                $("#ordered_by").text(orderby_fullName);
 
                 $("#client_email").text(client["email"])
                 $("#phone_number").text(client["phoneNumber"])
