--- a/checkoutPage.html
+++ b/checkoutPage.html
@@ -66,53 +66,6 @@
 
                 </li>
 
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="client_label">Client Last Name</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="client_lastName"></span>
-
-                </li>
-
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="orderby_label">Ordered By</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="ordered_by"></span>
-
-                </li>
-
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="email_label">Email</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="client_email"></span>
-
-                </li>
-
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="phone_label">Phone Number</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="phone_number"></span>
-
-                </li>
-
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="photo_label">Email photos at</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="photo_link"></span>
-
-                </li>
-
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                        <h6 class="my-0" id="datetime_label">Date & Time Selected</h6>
-                    </div>
-                    <span class=" col-md-6 text-muted" id="date-time"></span>
-
-                </li>
                 <li class="list-group-item d-flex justify-content-between">
                     <span>Total (CAD)</span>
                     <strong id="total_price">$20</strong>
@@ -193,7 +146,6 @@
                             Please select a valid country.
                         </div>
                     </div>
-
                     <div class="col-md-4 mb-3">
                         <label for="province">Select Province</label>
                         <select id="province" class="form-control" required>
@@ -284,8 +236,8 @@
                     </div>
                 </div>
                 <hr class="mb-4">
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
             </form>
+            <button class="btn btn-primary btn-lg btn-block" type="submit" id="continue_form">Continue to checkout</button>
         </div>
     </div>
 
@@ -303,52 +255,50 @@
     $(document).ready(function () {
         var $finalPriceText = $("#total_price");
         console.log("ready!");
-
         var appendClientData = function () {
-
             var client = $.parseJSON(window.localStorage.getItem("client_data"));
             if (client !== null) {
                 console.log(client)
                 $("#reference_number").text(client["reference"]);
-
                 var address = client["unitNumber"] + ", " + client["unitNumber"] + " " + client["streetNumber"] + ", " + client["street Name"] + ", " + client["city"] + ", " + client["zip"];
-
                 $("#address_full").text(address);
-
                 $("#street_suffix").text(client["streetSuffix"]);
                 $("#municipality").text(client["municipality"]);
                 $("#client_lastName").text(client["clientLastName"])
-
                 var orderby_fullName = client["orderFirstName"] + " " + client["orderLastName"];
-
-                $("#ordered_by").text(orderby_fullName);
-
+                $("ordered_by").text(orderby_fullName);
                 $("#client_email").text(client["email"])
                 $("#phone_number").text(client["phoneNumber"])
                 $("#photo_link").text(client["photoLink"])
-
                 $("#date-time").text(client["date"] + " " + client["time"]);
-
             } else {
                 console.log("no client data found from local storage, please go fill out the detail request form!")
             }
         };
-
         $("#coupon_button").on("click", function () {
             var coupon = $("#coupon_code").value;
-
             if (coupon === "drive-by-photos-001") {
-
                 $finalPriceText.text(0.00);
-
             } else {
                 alert("Sorry, that coupon code isn't valid! Try again later or contact us at \n info@valuforce.ca");
             }
+        }):
+
+        var client = $.parseJSON(window.localStorage.getItem("client_data"));
+        if (client !== null)
+        {
+            const thank_you = {
+            date-time : client["date"] + " " + client["time"];
+            email : client["email"];
+            }
+        }
+
+        $("#continue_form").on("click", function () {
+                window.localStorage.setItem('thanks_data', JSON.stringify(thank_you));
+                window.location.href = "./thankYouPage.html";
         });
 
-
         appendClientData();
-
 
     });
     </script>
